entry/.preview/intermediates/res/debug/rich/assets/js/default/compile_error.log
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\Administrator\Desktop\harmony-tic-tac-toe\entry\src\main\js\default\pages\game\game.js: Unexpected token (123:15)

  121 |         for (let j = 0; j < squares.length; j++) {
  122 |             const element = squares[j];
> 123 |             if()
      |                ^
  124 |
  125 |         }
  126 |
    at Parser._raise (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:808:17)
    at Parser.raiseWithData (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:801:17)
    at Parser.raise (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:762:17)
    at Parser.unexpected (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:3267:16)
    at Parser.parseExprAtom (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11556:20)
    at Parser.parseExprSubscripts (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11125:23)
    at Parser.parseUpdate (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11105:21)
    at Parser.parseMaybeUnary (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:11083:23)
    at Parser.parseMaybeUnaryOrPrivate (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:10897:77)
    at Parser.parseExprOps (D:\dev\HarmonyOS\js\3.0.0.5\build-tools\ace-loader\node_modules\@babel\parser\lib\index.js:10904:23)